move sync trackers to their own folder and partial

--- a/app/views/checkout/v1/spree/checkout/edit.html.slim
+++ b/app/views/checkout/v1/spree/checkout/edit.html.slim
@@ -2,7 +2,7 @@
   | page.initCheckoutEditPage();
 
 - support_telephone = {'us' => '866 527 7797', 'au' => '1300 924 860'}[current_site_version.code]
-= render 'shared/zopim'
+= render 'marketing/trackers/zopim'
 .checkout.page-content
   .container
     .row
