--- a/app/assets/stylesheets/redesign/_checkout_v2.css.scss
+++ b/app/assets/stylesheets/redesign/_checkout_v2.css.scss
@@ -61,8 +61,9 @@ $order-summary-bg: #f7f7f9;
         line-height: 1em;
         padding-left: 15px;
         padding-right: 15px;
+        a { color: #000000;  }
         &.live-chat {
-          a { color: #000000; font-weight:bold; }
+          a { font-weight:bold; }
         }
 
         .icon-live-chat, .icon-support-telephone {
