--- a/app/views/checkout/v1/spree/checkout/edit.html.slim
+++ b/app/views/checkout/v1/spree/checkout/edit.html.slim
@@ -12,7 +12,7 @@
             = link_to root_path
               = image_tag 'logo/logo-mobile.svg', alt: 'Fame & Partners', width: '78', height: '59'
             ' Secure checkout
-          = react_component('SupportOptions', { support_telephone: support_telephone }, preprender: true, class: 'support-options')
+          = react_component('SupportOptions', { support_telephone: support_telephone }, prerender: true, class: 'support-options')
 
         .comodo.hidden-xs.pull-right
           = image_tag "comodo-ssl.png", alt: "SSL", height: '35px', width: '112px'
