update corner image

--- a/app/views/products/details/_size_guide.html.slim
+++ b/app/views/products/details/_size_guide.html.slim
@@ -8,8 +8,8 @@
 - elsif size_chart == '2014'
   .fit-guide-corner-img
   .fit-guide-corner-text
-    h2 We have updated our sizing!  
-    p This dress follows our new size chart.
+    h2 We have updated our sizing!
+    p This dress follows our old sizing chart.
 
 .row
   .col
