--- a/app/views/products/collections/_product.html.slim
+++ b/app/views/products/collections/_product.html.slim
@@ -1,4 +1,4 @@
-.col-md-4.col-xs-6.col-xxs-12.category--item data-id=(product.id) data-color-id=(product.color.try(:id))
+col-xs-6.col-xxs-12.category--item data-id=(product.id) data-color-id=(product.color.try(:id)) class="#{col==3 ? 'col-md-4' : 'col-md-3'}"
   = link_to collection_product_path(product, color: product.color.try(:name)) do
     = image_tag product.images.first, :alt => product.name, :class => "img-product img-responsive", 'data-hover' => product.images.last
   .details.text-center
@@ -12,6 +12,6 @@
           sup +
           | moodboard
   - if product.fast_making
-	 = image_tag src='express_making.png', class: 'express-delivery', alt: "Express Making"
+	 = image_tag src='express_making.png', class: 'express-delivery', alt: "Express Making", style: "#{col==3 ? 'top:20px' : ''}"
   - if product.fast_delivery
 	 = image_tag src='express_delivery.png', class: 'express-delivery', alt: "Express Delivery"
