completed the buyrequest to the masterpass

--- a/spree_masterpass/app/views/spree/checkout/payment/_masterpass.html.slim
+++ b/spree_masterpass/app/views/spree/checkout/payment/_masterpass.html.slim
@@ -20,7 +20,8 @@
                   "loyaltyEnabled": "false",
                   "requestBasicCheckout": false,
                   "version":"v6"
-                });
+                });rails s
+
               }
           });
       });
