--- a/app/views/spree/admin/promotions/_form.html.erb
+++ b/app/views/spree/admin/promotions/_form.html.erb
@@ -27,6 +27,21 @@
         <%= f.check_box :advertise %>
         <%= f.label :advertise %>
       <% end %>
+
+      <%= f.field_container :eligible_to_sale_order do %>
+        <%= f.check_box :eligible_to_sale_order %>
+        <%= f.label :eligible_to_sale_order %>
+      <% end %>
+
+      <%= f.field_container :eligible_to_custom_order do %>
+        <%= f.check_box :eligible_to_custom_order %>
+        <%= f.label :eligible_to_custom_order %>
+      <% end %>
+
+      <%= f.field_container :require_shipping_charge do %>
+        <%= f.check_box :require_shipping_charge %>
+        <%= f.label :require_shipping_charge %>
+      <% end %>
     </div>
 
     <div class="omega nine columns">
