--- a/app/assets/stylesheets/redesign/product/_products_collections.css.scss
+++ b/app/assets/stylesheets/redesign/product/_products_collections.css.scss
@@ -186,6 +186,7 @@ li.select2-results__option {
 
 .filterArea{
 	margin-top: 10px;
+	padding-bottom:10px;
 	input {
 		margin-right: 5px;
 	}
@@ -195,6 +196,7 @@ li.select2-results__option {
 .filterRect{
 	background-color: #E8E8E8;
 	margin-top: 10px;
+	margin-bottom: 15px;
 	.filterText{
 		margin-left:25px;
 	}
