Add Return Shoppers admin view

--- a/engines/admin_ui/app/views/admin_ui/core/_menu_items.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/core/_menu_items.html.slim
@@ -28,6 +28,7 @@ li class=active_link_to_class('', active: /reports/)
     = active_link_to 'Order Totals', reports_order_totals_path, wrap_tag: :li
     = active_link_to 'Payments', reports_payments_path, wrap_tag: :li
     = active_link_to 'Sale Items', reports_sale_items_path, wrap_tag: :li
+    = active_link_to 'Return Shoppers', reports_return_shoppers_path, wrap_tag: :li
 
 = menu_item return_requests_path, 'Returns Management', icon: 'thumbs-down'
 
