just remove things

--- a/app/views/products/collections/_filters2.html.slim
+++ b/app/views/products/collections/_filters2.html.slim
@@ -5,6 +5,6 @@
     color_options = color_options_for_select_from_options_values(@filter.colors, @collection.color.try(:name))
 
 - prerender = true
-= react_component('CollectionFilter', {styles: @filter.styles, shapes: @filter.shapes, colors: @color_groups}.to_json , { prerender: prerender })
+= react_component('CollectionFilter', {styles: @filter.styles, shapes: @filter.shapes, colors: Repositories::ProductColors.color_groups}.to_json , { prerender: prerender })
 
 
