Update FITG link

--- a/app/views/layouts/redesign/_footer.html.slim
+++ b/app/views/layouts/redesign/_footer.html.slim
@@ -12,7 +12,7 @@
 
         - if current_site_version.is_australia?
           li.footer-nav--item
-            = link_to 'Fashion IT Girl', '/au/fashionitgirlau2015'
+            = link_to 'Fashion IT Girl', 'http://mystyle.fameandpartners.com/fitg-aus-2015'
 
         li.footer-nav--item
           = link_to 'FAQs & Shipping', faqs_path
