extract related products to partial
related products with jackets (not ready yet) [TO BE SQUASHED]

--- a/app/assets/stylesheets/redesign/product/_product.css.scss
+++ b/app/assets/stylesheets/redesign/product/_product.css.scss
@@ -1,3 +1,5 @@
+@import 'media_queries';
+
 .list-group-item.customization-option  {
 
 	img {
@@ -318,3 +320,19 @@
 }
 
 .sc-player { display: none; }
+
+// Related Products
+
+.dress-more {
+  .border-left-divider {
+    border-left: 1px solid #EEEEEE;
+
+    @include mobile {
+      border-left: none;
+    }
+
+    @include tablet {
+      border-left: none;
+    }
+  }
+}
