Fix Sale alert heights

--- a/app/assets/stylesheets/redesign/_vars.css.scss
+++ b/app/assets/stylesheets/redesign/_vars.css.scss
@@ -22,3 +22,9 @@ $mega-menu-mobile-height: 115px;
 $locale-warn-desktop-height: 48px;
 $locale-warn-mobile-height: 68px;
 // @end Locale Warn
+
+// Layout
+// Bootstrap uses these widths as breakpoints
+$bootstrap-sm-width: 768px;
+$bootstrap-md-width: 992px;
+$bootstrap-lg-width: 1200px;
