--- a/app/assets/stylesheets/redesign/_alerts.css.scss
+++ b/app/assets/stylesheets/redesign/_alerts.css.scss
@@ -1,6 +1,12 @@
+@media (max-width: 992px) {
+  .alert-sale {
+    margin-top: $mega-menu-mobile-height;
+  }
+}
+
 .alert-sale {
   position: absolute;
-  top: 70px;
+  top: $mega-menu-desktop-height;
   left: 0;
   right: 0;
   z-index: 4;
