--- a/app/views/spree/admin/sales/edit.html.erb
+++ b/app/views/spree/admin/sales/edit.html.erb
@@ -51,6 +51,10 @@
         </div>
       </fieldset>
       <fieldset>
+        <legend>Mega Menu Tile</legend>
+        <%= image_tag "//#{configatron.asset_host}/sale/#{current_sale.name.downcase}.jpg", class: 'img-responsive' %>
+      </fieldset>
+      <fieldset>
         <legend><%= t(:default_discount_settings) %></legend>
         <div class="clearfix">
           <div class="four columns">
