--- a/app/views/spree/admin/sales/edit.html.erb
+++ b/app/views/spree/admin/sales/edit.html.erb
@@ -55,10 +55,10 @@
         <p>Place a JPG of the same name as the current sale (lowercase) in the Marketing S3 bucket under <code>sale/</code></p>
         <p>
           <strong>e.g.</strong>
-          <%= "//#{configatron.asset_host}/sale/#{current_sale.name.downcase}.jpg"%>
+          <%= @object.mega_menu_image_url %>
         </p>
         <p>
-        <%= image_tag "//#{configatron.asset_host}/sale/#{current_sale.name.downcase}.jpg", class: 'img-responsive' %>
+        <%= image_tag @object.mega_menu_image_url, class: 'img-responsive' %>
         </p>
       </fieldset>
       <fieldset>
