--- a/app/assets/stylesheets/redesign/_alerts.css.scss
+++ b/app/assets/stylesheets/redesign/_alerts.css.scss
@@ -1,4 +1,4 @@
-@media (max-width: 992px) {
+@media (max-width: $bootstrap-md-width) {
   .alert-sale {
     margin-top: $mega-menu-mobile-height;
   }
