--- a/app/assets/stylesheets/redesign/_alerts.css.scss
+++ b/app/assets/stylesheets/redesign/_alerts.css.scss
@@ -1,9 +1,3 @@
-@media (max-width: $bootstrap-md-width) {
-  .alert-sale {
-    margin-top: $mega-menu-mobile-height;
-  }
-}
-
 .alert-sale {
   position: absolute;
   top: $mega-menu-desktop-height;
@@ -66,6 +60,12 @@
   // Fix for product page
   &:not(.hidden) ~ .product-content {
     top: 15rem;
+  }
+}
+
+@media (max-width: $bootstrap-md-width) {
+  .alert-sale {
+    top: $mega-menu-mobile-height;
   }
 }
 
