--- a/app/views/spree/admin/sales/edit.html.erb
+++ b/app/views/spree/admin/sales/edit.html.erb
@@ -58,7 +58,7 @@
           <%= @object.mega_menu_image_url %>
         </p>
         <p>
-        <%= image_tag @object.mega_menu_image_url, class: 'img-responsive' %>
+        <%= image_tag "http:#{@object.mega_menu_image_url}", class: 'img-responsive' %>
         </p>
       </fieldset>
       <fieldset>
