add pointer to thumb

--- a/app/assets/stylesheets/redesign/product/_products_collections.css.scss
+++ b/app/assets/stylesheets/redesign/product/_products_collections.css.scss
@@ -96,6 +96,7 @@
 	    height: 20px;
 	    float: left;
 	    margin-right: 10px;
+	    cursor: pointer;
 	}
 	.thumbtrue{
 		background-color: black;
