--- a/app/views/spree/admin/shared/_routes.html.erb
+++ b/app/views/spree/admin/shared/_routes.html.erb
@@ -4,6 +4,6 @@
     :taxon_search          => spree.search_admin_taxons_path(:format => 'json'),
     :user_search           => spree.admin_search_users_path(:format => 'json'),
     :product_search        => spree.search_admin_products_path(:format => 'json'),
-    :jacket_search         => spree.admin_search_jackets_path(:format => 'json')
+    :outerwear_search      => spree.admin_search_outerwear_path(:format => 'json')
   }.to_json %>;
 </script>
