rename related_jackets to related_outerwear relationship

--- a/app/views/products/details/_related_products.html.slim
+++ b/app/views/products/details/_related_products.html.slim
@@ -1,7 +1,7 @@
 ruby:
   related = Products::RelatedPresenter.new(
           recommended_products: product.recommended_products,
-          related_jackets:      product.related_jackets
+          related_outerwear:      product.related_outerwear
   )
 
 .dress-more.container.page-content
