fix yellow color

--- a/app/assets/stylesheets/redesign/product/_products_collections.css.scss
+++ b/app/assets/stylesheets/redesign/product/_products_collections.css.scss
@@ -121,7 +121,7 @@
 			background-image: url(check.png);
 		}
 		.Yellow{
-			background-color: yellow !important;
+			background-color: #F5F504 !important;
 			background-image: url(check.png);
 		}
 		.Nude{
