--- a/app/assets/stylesheets/redesign/product/_products_collections.css.scss
+++ b/app/assets/stylesheets/redesign/product/_products_collections.css.scss
@@ -254,6 +254,12 @@
 	left: 15px;
 }
 
+.col-md-4 {
+  .express-delivery {
+  	top:20px;
+  }
+}
+
 li.select2-results__option {
 	background-color: #f5f5f5 ;
 	font-weight: 600;
@@ -270,7 +276,7 @@ li.select2-results__option {
 	background-color: #eeddf0;
 }
 
-.filterArea{
+.filterArea {
 	margin-top: 10px;
 	padding-bottom:10px;
 	input {
