--- a/app/views/products/collections/show.html.slim
+++ b/app/views/products/collections/show.html.slim
@@ -14,8 +14,8 @@
   = render :partial => 'filters_sort'
   .container-fluid
     .row-fluid
-      .col-md-3
-        div style="padding-top:20px;padding-left: 15px;width: 65%;margin-left: 10%;"
+      .col-md-3.filterCol
+        div.inner
           = render :partial => 'filters_color_shape_style'
 
       .col-md-9
